@@ -309,12 +309,17 @@ class Adminer {
 	* @return null
 	*/
 	function tableStructurePrint($fields) {
+		global $structured_types;
 		echo "<div class='scrollable'>\n";
 		echo "<table cellspacing='0' class='nowrap odds'>\n";
 		echo "<thead><tr><th>" . lang('Column') . "<td>" . lang('Type') . (support("comment") ? "<td>" . lang('Comment') : "") . "</thead>\n";
 		foreach ($fields as $field) {
 			echo "<tr><th>" . h($field["field"]);
-			echo "<td><span title='" . h($field["collation"]) . "'>" . h($field["full_type"]) . "</span>";
+			$type = h($field["full_type"]);
+			echo "<td><span title='" . h($field["collation"]) . "'>"
+				. (in_array($type, (array) $structured_types[lang('User types')]) ? "<a href='" . h(ME . 'type=' . urlencode($type)) . "'>$type</a>" : $type)
+				. "</span>"
+			;
 			echo ($field["null"] ? " <i>NULL</i>" : "");
 			echo ($field["auto_increment"] ? " <i>" . lang('Auto Increment') . "</i>" : "");
 			echo (isset($field["default"]) ? " <span title='" . lang('Default value') . "'>[<b>" . h($field["default"]) . "</b>]</span>" : "");
